# hmscrobbler

./: README.md  hmscrobbler.cabal  stack.yaml
app/: Main.hs
src/: Flac.hs  LastFM.hs  Lib.hs  MPlayer.hs  Pid.hs  PidUtils.hs
test/: Spec.hs
