name:                hmscrobbler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/amir/hmscrobbler#readme
license:             PublicDomain
license-file:        UNLICENSE
author:              Amir M. Saeid
maintainer:          amir@glgdgt.com
copyright:           2016 Amir M. Saeid
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pid
                     , Flac
                     , LastFM
                     , MPlayer
  build-depends:       base >= 4.7 && < 5
                     , text       == 1.2.2.1
                     , aeson      == 0.11.2.1
                     , cereal     == 0.5.4.0
                     , binary     == 0.8.3.0
                     , parsec     == 3.1.11
                     , process    == 1.4.2.0
                     , liblastfm  == 0.6.0
                     , bytestring == 0.10.8.1
  default-language:    Haskell2010

executable hmscrobbler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hmscrobbler
                     , time     == 1.6.0.1
                     , text     == 1.2.2.1
                     , hinotify == 0.3.9
  default-language:    Haskell2010

test-suite hmscrobbler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hmscrobbler
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amir/hmscrobbler
